# Pyflix

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml
Pyflix/: asgi.py  settings.py  urls.py  wsgi.py
filme/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
filme/migrations/: 0001_initial.py
filme/templates/: criarconta.html  detalhesfilme.html  editarperfil.html  homefilmes.html  homepage.html  login.html  logout.html  pesquisa.html
templates/: base.html  navbar.html
