[project]
name = "copia-netflix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.3",
    "django-crispy-forms>=2.4",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
]
