[project]
name = "copia-netflix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudinary>=1.44.1",
    "crispy-bootstrap5>=2025.6",
    "dj-database-url>=3.0.0",
    "django>=5.2.3",
    "django-cloudinary-storage>=0.3.0",
    "django-crispy-forms>=2.4",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "whitenoise>=6.9.0",
]
